Incorrect link references to GitHub in changelog
Corrected a number of link references to GitHub

--- a/doc/changelog.dox
+++ b/doc/changelog.dox
@@ -11,51 +11,51 @@
 <li>issue <a href="https://github.com/doxygen/doxygen/issues/4280">#4280</a> bug_651081 Inconsistency between @page and @subpage parsing [<a href="https://github.com/doxygen/doxygen/commit/bcabbda664cf3f5c29a778cae4bdb01717453b60">view</a>]</li>
 <li>issue <a href="https://github.com/doxygen/doxygen/issues/5767">#5767</a> bug_746577 Problem locating unresolvable @ref in case of a MSC image [<a href="https://github.com/doxygen/doxygen/commit/2db2085abdaa535d4c5eb729d64a82667d43435c">view</a>]</li>
 <li>issue <a href="https://github.com/doxygen/doxygen/issues/6335">#6335</a> bug 793570 Keep the original code indentation [<a href="https://github.com/doxygen/doxygen/commit/14cab78889049e29cec0c2d25133698d43d6db5a">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/6996">#6996</a> Missing definitions for BUILTIN_STL_SUPPORT [<a href="https://github.com/doxygen/doxygen/commit/de15714552ad3ad03909f39c02bd2e4cad77c861">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/7688">#7688</a> Include markdown file in mainpage.dox [<a href="https://github.com/doxygen/doxygen/commit/2f1faeee464a162d3a7ef1219a3fca3358c7f918">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/3d2b69b2ab29e92ed9cad6e37b7cad393fb8a87a">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/7780d514980a97cfc2a5f21761ed7da338466350">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/e8c5f5596fc73ee329dec03f0c8ebdd8247a10dd">view</a>]
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/6996">#6996</a> Missing definitions for BUILTIN_STL_SUPPORT [<a href="https://github.com/doxygen/doxygen/commit/de15714552ad3ad03909f39c02bd2e4cad77c861">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/7688">#7688</a> Include markdown file in mainpage.dox [<a href="https://github.com/doxygen/doxygen/commit/2f1faeee464a162d3a7ef1219a3fca3358c7f918">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/3d2b69b2ab29e92ed9cad6e37b7cad393fb8a87a">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/7780d514980a97cfc2a5f21761ed7da338466350">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/e8c5f5596fc73ee329dec03f0c8ebdd8247a10dd">view</a>]
 , [<a href="https://github.com/doxygen/doxygen/commit/66ad8894add190f2e7672f61ed9c9f5837900a74">view</a>]
 , [<a href="https://github.com/doxygen/doxygen/commit/b505016f4d0c4f819d862fa7174ff74a2846a92c">view</a>]
 , [<a href="https://github.com/doxygen/doxygen/commit/b6018c30bcf010fd709aaeec18f9a385b0de5ecc">view</a>]
 , [<a href="https://github.com/doxygen/doxygen/commit/1bf6b7fbc8904735f5c348772f4dd00b21113e14">view</a>]
 , [<a href="https://github.com/doxygen/doxygen/commit/408a727bc92b8687a9587d94839569274439fa07">view</a>]
 , and [<a href="https://github.com/doxygen/doxygen/commit/4b24900f0c1a3aca121164ead1421c4ff91b4a96">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10263">#10263</a> please add a use_sys_sqlite3 config option [<a href="https://github.com/doxygen/doxygen/commit/28609fecd41d885e54fa170e499a0e5b55def2c2">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10282">#10282</a> Infinite loop when parsing a simple header file [<a href="https://github.com/doxygen/doxygen/commit/83116d0c0d35797d23e1bc09a1713833b1fee771">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10278">#10278</a> Weird behavior [<a href="https://github.com/doxygen/doxygen/commit/13c270eedb4128251a1ca2efbe4d4d319c6d90ec">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10295">#10295</a> typedef of a function incorrectly output in HTML and PDF [<a href="https://github.com/doxygen/doxygen/commit/c29b0e69b907ec1ae2bdee01498fdb46cb8a6989">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10304">#10304</a> Cannot copydoc operator* [<a href="https://github.com/doxygen/doxygen/commit/bbb1bb0a41a9c95e517bf14b1ab805e7599f406b">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10306">#10306</a> Some intra-page links include the HTML file name [<a href="https://github.com/doxygen/doxygen/commit/d1395aacc6ab8d02910a649d114f23a5142f511a">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10313">#10313</a> [BUG] error when handle types defined with lambda [<a href="https://github.com/doxygen/doxygen/commit/f23bba320bdc04996849bd8a369414f4a7950a0d">view</a>] and [<a href="https://github.com/doxygen/doxygen/commit/a928976086e6d9038b206ea12d42751204fa1cc0">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10324">#10324</a> [C#] Using expression-bodied functions with generics generates wrong type constraints. [<a href="https://github.com/doxygen/doxygen/commit/adc18248d735d4900e3e989610183ca7066fa817">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10334">#10334</a>: Multi line initialization for using [<a href="https://github.com/doxygen/doxygen/commit/73874def7998419647a6281ec4b39c4261d4d18f">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10343">#10343</a> Missing &#39;Referenced by&#39; links for macros (C/C++) [<a href="https://github.com/doxygen/doxygen/commit/fd79b23ffdb359135d99581cf5fde9522cd49e65">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10344">#10344</a> &quot;param ?callable $callback&quot; misinterpreted as undocumented parameter [<a href="https://github.com/doxygen/doxygen/commit/e8b3c5bd7cb9d0142786fda66856b759322a0cd5">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10349">#10349</a> Autolinks to functions point to the struct with the same name [<a href="https://github.com/doxygen/doxygen/commit/0dd71c6235993ed91a8179fca597ac78ac30d8ca">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/83739289f715bc2f2cec73eca22fa6a29b29cdab">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10350">#10350</a> INLINE_GROUPED_CLASSES=YES fails with GROUP_NESTED_COMPOUNDS=NO [<a href="https://github.com/doxygen/doxygen/commit/32e623896bd596d210f4638098e63f256e95d4bf">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10351">#10351</a> Search subpart research after a search [<a href="https://github.com/doxygen/doxygen/commit/63a5b5a13f45524de30291d7bb149bf742ef39d0">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10353">#10353</a> Doxygen cannot handle TYPEDEF after PlantUML [<a href="https://github.com/doxygen/doxygen/commit/c4353ee5d1adb9e12c3f03eee7cc20e67ee11ec9">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10354">#10354</a> Make polyfill optional, at least. [<a href="https://github.com/doxygen/doxygen/commit/41e3eeed6d7c34d14f072cbfea5fe418fc65a760">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10356">#10356</a> CopyDoc target is parsed incorrectly [<a href="https://github.com/doxygen/doxygen/commit/1e2c9ecfb40a1a80113aead22b6fb6cc42a97e7e">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10369">#10369</a> Found &#39;;&#39; while parsing initializer list! for member function pointer [<a href="https://github.com/doxygen/doxygen/commit/d9d5e0774da7a63ab554a4cb2f004078b41167b4">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10377">#10377</a> Wrong syntax for output of non-C++ deprecation lists for enum members [<a href="https://github.com/doxygen/doxygen/commit/86a92e0063df3f60c6b5141ae158989896a8ecf1">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10388">#10388</a> Can&#39;t link to a tagfile page in DoxygenLayout? [<a href="https://github.com/doxygen/doxygen/commit/f6fb142ae19b65bb5ab41061358e17afbe6e3659">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10392">#10392</a> GENERATE_XML generates XML files with erroneous &lt;/codeline&gt;s in &lt;programlisting&gt; [<a href="https://github.com/doxygen/doxygen/commit/70d8358cfeb59ba1bd8a18a45a890fcb7eae4aff">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10395">#10395</a> Doxygen link generation does not find concepts unless complete path is specified [<a href="https://github.com/doxygen/doxygen/commit/52811731a38d6fe734364dc2f933c667744ea1b2">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10404">#10404</a> Wrong type for overloaded template method in tagfile [<a href="https://github.com/doxygen/doxygen/commit/234ebc2c45fe95972d94857c1c35b52aa981a667">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10414">#10414</a> Report warning with wrong file and wrong line number [<a href="https://github.com/doxygen/doxygen/commit/de8b7f6212dd0d71225ff7b2d6b3ba982748bd4a">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/4729e92540dbf6eb971fbec73f8fc855bb84a0b7">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/5c2b305183780b027f858fe597c416b794ad61de">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10417">#10417</a> Search bar not working [<a href="https://github.com/doxygen/doxygen/commit/92934836e84a15e849223e0b5af66aace16561ca">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10447">#10447</a> Add explicit links to static pages [<a href="https://github.com/doxygen/doxygen/commit/9dcba09a681ef5438f18e5c15bc327e4e5cad408">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10449">#10449</a> \include{doc} ignores EXAMPLE_PATH [<a href="https://github.com/doxygen/doxygen/commit/36735cd707f145876e82dcb971b675e5f4256df7">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/627ee6dcb36da420995b3d142577482684008c4e">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/9983553eda374ee29252a3c6407768a29a573b60">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/f1cb5def274623ac28b2905fbc7f79f3cdf32f44">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10460">#10460</a> `\hideinheritancegraph` not working [<a href="https://github.com/doxygen/doxygen/commit/dca8cf9d36473d82958bca1df1e681340bc4de02">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10466">#10466</a> Markdown: inline statements in page headings are escaped and render as text [<a href="https://github.com/doxygen/doxygen/commit/ac3e545de2865602154094ddfdd664fe5269af2e">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10472">#10472</a> Symbols within a namespace after a heavily #ifdef class are omitted in HTML output [<a href="https://github.com/doxygen/doxygen/commit/1b76ace319431d950ce5e7ba5260e7315c8be33f">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10473">#10473</a> doxygen hangs forever after &quot;Building directory list...&quot; [<a href="https://github.com/doxygen/doxygen/commit/1fc93832465edc56c80285cf8d370fc6e11e242e">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/7fc4bce2bfa8c76b8ca4f82bc1e64ea3ad0d0315">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/cb3c5423244b2b6fcc5ee67651df38ad03af0dfd">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10474">#10474</a> doxygen fails to render /some/ MarkDown links to local files with relative path [<a href="https://github.com/doxygen/doxygen/commit/3917c136c714e53679992749b5ccaeb8d70622f8">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10475">#10475</a> doxygen does not correctly render link content in MarkDown file [<a href="https://github.com/doxygen/doxygen/commit/351dba64b602b2334f3d7400af1088c1be62aa99">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10485">#10485</a> Parsing error with C++20 requires clause if at the end of the function declaration [<a href="https://github.com/doxygen/doxygen/commit/d15c2c3417a597c11c01732ea076cb70fa113828">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10498">#10498</a> `cmakedefine01 macros are not documented [<a href="https://github.com/doxygen/doxygen/commit/333126281c8512acbfa694f5f2d0deb0d7556cde">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/998ea0e6153189ebc106f2c097add7a130f0672c">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10499">#10499</a> Child class with template parameter named differently than parent: unqualified base class in tagfile [<a href="https://github.com/doxygen/doxygen/commit/1fa3e7008af3329681cd3d5cdbb93d764901e43b">view</a>]</li>
-<li>issue <a href="https://github/doxygen/doxygen/issues/10506">#10506</a> Keyword-like forms of logical operators are not supported in C++ requires clause [<a href="https://github.com/doxygen/doxygen/commit/692b0ae3eabc9a93fb7a17035308ff430ff3e94d">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10263">#10263</a> please add a use_sys_sqlite3 config option [<a href="https://github.com/doxygen/doxygen/commit/28609fecd41d885e54fa170e499a0e5b55def2c2">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10282">#10282</a> Infinite loop when parsing a simple header file [<a href="https://github.com/doxygen/doxygen/commit/83116d0c0d35797d23e1bc09a1713833b1fee771">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10278">#10278</a> Weird behavior [<a href="https://github.com/doxygen/doxygen/commit/13c270eedb4128251a1ca2efbe4d4d319c6d90ec">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10295">#10295</a> typedef of a function incorrectly output in HTML and PDF [<a href="https://github.com/doxygen/doxygen/commit/c29b0e69b907ec1ae2bdee01498fdb46cb8a6989">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10304">#10304</a> Cannot copydoc operator* [<a href="https://github.com/doxygen/doxygen/commit/bbb1bb0a41a9c95e517bf14b1ab805e7599f406b">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10306">#10306</a> Some intra-page links include the HTML file name [<a href="https://github.com/doxygen/doxygen/commit/d1395aacc6ab8d02910a649d114f23a5142f511a">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10313">#10313</a> [BUG] error when handle types defined with lambda [<a href="https://github.com/doxygen/doxygen/commit/f23bba320bdc04996849bd8a369414f4a7950a0d">view</a>] and [<a href="https://github.com/doxygen/doxygen/commit/a928976086e6d9038b206ea12d42751204fa1cc0">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10324">#10324</a> [C#] Using expression-bodied functions with generics generates wrong type constraints. [<a href="https://github.com/doxygen/doxygen/commit/adc18248d735d4900e3e989610183ca7066fa817">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10334">#10334</a>: Multi line initialization for using [<a href="https://github.com/doxygen/doxygen/commit/73874def7998419647a6281ec4b39c4261d4d18f">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10343">#10343</a> Missing &#39;Referenced by&#39; links for macros (C/C++) [<a href="https://github.com/doxygen/doxygen/commit/fd79b23ffdb359135d99581cf5fde9522cd49e65">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10344">#10344</a> &quot;param ?callable $callback&quot; misinterpreted as undocumented parameter [<a href="https://github.com/doxygen/doxygen/commit/e8b3c5bd7cb9d0142786fda66856b759322a0cd5">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10349">#10349</a> Autolinks to functions point to the struct with the same name [<a href="https://github.com/doxygen/doxygen/commit/0dd71c6235993ed91a8179fca597ac78ac30d8ca">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/83739289f715bc2f2cec73eca22fa6a29b29cdab">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10350">#10350</a> INLINE_GROUPED_CLASSES=YES fails with GROUP_NESTED_COMPOUNDS=NO [<a href="https://github.com/doxygen/doxygen/commit/32e623896bd596d210f4638098e63f256e95d4bf">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10351">#10351</a> Search subpart research after a search [<a href="https://github.com/doxygen/doxygen/commit/63a5b5a13f45524de30291d7bb149bf742ef39d0">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10353">#10353</a> Doxygen cannot handle TYPEDEF after PlantUML [<a href="https://github.com/doxygen/doxygen/commit/c4353ee5d1adb9e12c3f03eee7cc20e67ee11ec9">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10354">#10354</a> Make polyfill optional, at least. [<a href="https://github.com/doxygen/doxygen/commit/41e3eeed6d7c34d14f072cbfea5fe418fc65a760">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10356">#10356</a> CopyDoc target is parsed incorrectly [<a href="https://github.com/doxygen/doxygen/commit/1e2c9ecfb40a1a80113aead22b6fb6cc42a97e7e">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10369">#10369</a> Found &#39;;&#39; while parsing initializer list! for member function pointer [<a href="https://github.com/doxygen/doxygen/commit/d9d5e0774da7a63ab554a4cb2f004078b41167b4">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10377">#10377</a> Wrong syntax for output of non-C++ deprecation lists for enum members [<a href="https://github.com/doxygen/doxygen/commit/86a92e0063df3f60c6b5141ae158989896a8ecf1">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10388">#10388</a> Can&#39;t link to a tagfile page in DoxygenLayout? [<a href="https://github.com/doxygen/doxygen/commit/f6fb142ae19b65bb5ab41061358e17afbe6e3659">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10392">#10392</a> GENERATE_XML generates XML files with erroneous &lt;/codeline&gt;s in &lt;programlisting&gt; [<a href="https://github.com/doxygen/doxygen/commit/70d8358cfeb59ba1bd8a18a45a890fcb7eae4aff">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10395">#10395</a> Doxygen link generation does not find concepts unless complete path is specified [<a href="https://github.com/doxygen/doxygen/commit/52811731a38d6fe734364dc2f933c667744ea1b2">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10404">#10404</a> Wrong type for overloaded template method in tagfile [<a href="https://github.com/doxygen/doxygen/commit/234ebc2c45fe95972d94857c1c35b52aa981a667">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10414">#10414</a> Report warning with wrong file and wrong line number [<a href="https://github.com/doxygen/doxygen/commit/de8b7f6212dd0d71225ff7b2d6b3ba982748bd4a">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/4729e92540dbf6eb971fbec73f8fc855bb84a0b7">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/5c2b305183780b027f858fe597c416b794ad61de">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10417">#10417</a> Search bar not working [<a href="https://github.com/doxygen/doxygen/commit/92934836e84a15e849223e0b5af66aace16561ca">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10447">#10447</a> Add explicit links to static pages [<a href="https://github.com/doxygen/doxygen/commit/9dcba09a681ef5438f18e5c15bc327e4e5cad408">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10449">#10449</a> \include{doc} ignores EXAMPLE_PATH [<a href="https://github.com/doxygen/doxygen/commit/36735cd707f145876e82dcb971b675e5f4256df7">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/627ee6dcb36da420995b3d142577482684008c4e">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/9983553eda374ee29252a3c6407768a29a573b60">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/f1cb5def274623ac28b2905fbc7f79f3cdf32f44">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10460">#10460</a> `\hideinheritancegraph` not working [<a href="https://github.com/doxygen/doxygen/commit/dca8cf9d36473d82958bca1df1e681340bc4de02">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10466">#10466</a> Markdown: inline statements in page headings are escaped and render as text [<a href="https://github.com/doxygen/doxygen/commit/ac3e545de2865602154094ddfdd664fe5269af2e">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10472">#10472</a> Symbols within a namespace after a heavily #ifdef class are omitted in HTML output [<a href="https://github.com/doxygen/doxygen/commit/1b76ace319431d950ce5e7ba5260e7315c8be33f">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10473">#10473</a> doxygen hangs forever after &quot;Building directory list...&quot; [<a href="https://github.com/doxygen/doxygen/commit/1fc93832465edc56c80285cf8d370fc6e11e242e">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/7fc4bce2bfa8c76b8ca4f82bc1e64ea3ad0d0315">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/cb3c5423244b2b6fcc5ee67651df38ad03af0dfd">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10474">#10474</a> doxygen fails to render /some/ MarkDown links to local files with relative path [<a href="https://github.com/doxygen/doxygen/commit/3917c136c714e53679992749b5ccaeb8d70622f8">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10475">#10475</a> doxygen does not correctly render link content in MarkDown file [<a href="https://github.com/doxygen/doxygen/commit/351dba64b602b2334f3d7400af1088c1be62aa99">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10485">#10485</a> Parsing error with C++20 requires clause if at the end of the function declaration [<a href="https://github.com/doxygen/doxygen/commit/d15c2c3417a597c11c01732ea076cb70fa113828">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10498">#10498</a> `cmakedefine01 macros are not documented [<a href="https://github.com/doxygen/doxygen/commit/333126281c8512acbfa694f5f2d0deb0d7556cde">view</a>], [<a href="https://github.com/doxygen/doxygen/commit/998ea0e6153189ebc106f2c097add7a130f0672c">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10499">#10499</a> Child class with template parameter named differently than parent: unqualified base class in tagfile [<a href="https://github.com/doxygen/doxygen/commit/1fa3e7008af3329681cd3d5cdbb93d764901e43b">view</a>]</li>
+<li>issue <a href="https://github.com/doxygen/doxygen/issues/10506">#10506</a> Keyword-like forms of logical operators are not supported in C++ requires clause [<a href="https://github.com/doxygen/doxygen/commit/692b0ae3eabc9a93fb7a17035308ff430ff3e94d">view</a>]</li>
 <li>Add missing C++20 module file extension [<a href="https://github.com/doxygen/doxygen/commit/0268ceef25f428a053eca67e02e084323a4ef4b7">view</a>]</li>
 <li>Added missing start of paragraph after code fragment [<a href="https://github.com/doxygen/doxygen/commit/7087e782d448d78ec256fa605518ff3a3a5a524e">view</a>]</li>
 <li>Content did not scroll when move between anchors [<a href="https://github.com/doxygen/doxygen/commit/441e1ce0447748c36a2a8a409d1bf2125b13e82a">view</a>]</li>
