Provide environment for latex tables
Latex tables are literally described in doxygen executable. Doing so, it
is not possible for a user to redefine these tables.

By definig an environment for each of them, the user can now redefine
them, by using renewenvironment.

NB: old environment TabularC and TabularNC were not used anymore, remove
dead code.

--- a/templates/latex/doxygen.sty
+++ b/templates/latex/doxygen.sty
@@ -510,14 +510,15 @@
 
 % Used by tables
 \newcommand{\PBS}[1]{\let\temp=\\#1\let\\=\temp}%
-\newenvironment{TabularC}[1]%
-{\tabulinesep=1mm
-\begin{longtabu*}spread 0pt [c]{*#1{|X[-1]}|}}%
-{\end{longtabu*}\par}%
 
-\newenvironment{TabularNC}[1]%
-{\begin{tabu}spread 0pt [l]{*#1{|X[-1]}|}}%
-{\end{tabu}\par}%
+\newenvironment{DoxyTable}[1]%
+{\tabulinesep=1mm%
+\begin{longtabu}spread 0pt [c]{*{#1}{|X[-1]}|}}%
+{\end{longtabu}}%
+
+\newenvironment{DoxyNestedTable}[1]%
+{\begin{tabularx}{\linewidth}{|*{#1}{>{\raggedright\arraybackslash}X|}}}%
+{\end{tabularx}}%
 
 % Used for member group headers
 \newenvironment{Indent}{%
