--- a/templates/latex/doxygen.sty
+++ b/templates/latex/doxygen.sty
@@ -199,6 +199,10 @@
 \setlist[DoxyItemize,3]{label=\textasteriskcentered}
 \setlist[DoxyItemize,4]{label=\textperiodcentered}
 
+% Used for check boxes
+\newcommand{\DoxyUnchecked}{$\square$}
+\newcommand{\DoxyChecked}{\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \checkmark}}$\square$}
+
 % Used by description lists (using <dl> ... </dl>)
 \newenvironment{DoxyDescription}{%
   \description%
